--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -302,11 +302,7 @@
 				<strong>联系方式</strong>
 			</h3>
 			
-      <div id="contribute" style="display:none;">
-        <p align="center" >
-			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" alt="QQ群" >
-        </p>
-      </div>
+			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" alt="QQ群" width="50%">
 			
 			<br/>
 			<p>
