--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -302,7 +302,7 @@
 				<strong>联系方式</strong>
 			</h3>
 			
-			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" alt="QQ群" width="50%">
+			<img src="\assets\2018\zhuhaifsectrackmod\groupQR.png" alt="QQ群" style="width: 250px">
 			
 			<br/>
 			<p>
