--- a/customview/zhuhaifsectrackmod.html
+++ b/customview/zhuhaifsectrackmod.html
@@ -292,6 +292,9 @@
 			<p>
 				<span>以上要求只需满足一条。如果你具有能力并且愿意在寒假至少每天分配出2小时时间、容易沟通、学习能力强、希望用实际行动提升车手训练条件与支持</span><span>fsae</span><span>发展</span><span>，欢迎加入我们。</span>
 			</p>
+			<p>
+				感谢<a href="https://weibo.com/u/1645086951" target="_blank" >襄阳梦想方程式赛场mod制作者LightNMagic</a>参加本次项目，他将作为本次项目的技术指导，方便同学们学习交流，更好地帮助本项目的完成。
+			</p>
 			
 			
 			<br/>
