--- a/fsaesim/index.html
+++ b/fsaesim/index.html
@@ -251,7 +251,7 @@ function MM_swapImage() { //v3.0
         </tr>
         <tr>
           <td align="center"></td>
-          <td class="t14"><a href="https://pan.baidu.com/s/1qWHZItY" target="_blank" class="T12">【赛道】FSAESIM-RACE 襄阳梦想赛车场</a></td>
+          <td class="t14"><a href="https://weibo.com/1645086951/Hcwdbv2RM" target="_blank" class="T12">【赛道】FSAESIM-RACE 襄阳梦想赛车场</a></td>
           <td align="center"></td>
           <td class="t14"><a href="https://pan.baidu.com/s/1C9D49kSQ4UA6TURBgwOCVw" target="_blank" class="T12">【车辆】Ford Fiesta WRC</a></td>
 		</tr>
