--- a/bitfsae/index.html
+++ b/bitfsae/index.html
@@ -158,15 +158,15 @@ function MM_swapImage() { //v3.0
           <td width="341" align="center">&nbsp;</td>
         </tr>
         <tr>
-          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=BITFSAE-1" target="_blank" onMouseOver="MM_swapImage('Image1','','img/Mont Tremblant.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Mont Tremblant.png" width="270" height="142" id="Image1"></a></td>
-          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=BITFSAE-2" target="_blank" onMouseOver="MM_swapImage('Image2','','img/Goparc.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Goparc.png" width="270" height="142" id="Image2"></a></td>
-          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=BITFSAE-3" target="_blank" onMouseOver="MM_swapImage('Image3','','img/Kartodromo de Valencia.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Kartodromo de Valencia.png" width="270" height="142" id="Image3"></a></td>
+          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=FSAESIM-1" target="_blank" onMouseOver="MM_swapImage('Image1','','img/Mont Tremblant.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Mont Tremblant.png" width="270" height="142" id="Image1"></a></td>
+          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=FSAESIM-2" target="_blank" onMouseOver="MM_swapImage('Image2','','img/Goparc.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Goparc.png" width="270" height="142" id="Image2"></a></td>
+          <td align="center"><a href="http://106.52.66.220:50041/lapstat?currservers=FSAESIM-3" target="_blank" onMouseOver="MM_swapImage('Image3','','img/Kartodromo de Valencia.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/Kartodromo de Valencia.png" width="270" height="142" id="Image3"></a></td>
         </tr>
 		
         <tr>
-          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20000" target="_blank" class="t14">BITFSAE-1 室外卡丁赛道-Mont Tremblant</a></td>
-          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20002" target="_blank" class="t14">BITFSAE-2 室内卡丁赛道-Goparc</a></td>
-          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20004" target="_blank" class="t14">BITFSAE-3 室外卡丁赛道-Kartodromo de Valencia</a></td>
+          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20000" target="_blank" class="t14">FSAESIM-1 室外卡丁赛道-Mont Tremblant</a></td>
+          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20002" target="_blank" class="t14">FSAESIM-2 室内卡丁赛道-Goparc</a></td>
+          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20004" target="_blank" class="t14">FSAESIM-3 室外卡丁赛道-Kartodromo de Valencia</a></td>
         </tr>
         <tr>
           <td align="center" class="t14">&nbsp;</td>
@@ -174,11 +174,11 @@ function MM_swapImage() { //v3.0
           <td align="center" class="t14">&nbsp;</td>
         </tr>
         <tr>
-          <td align="center" class="t14"><a href="http://106.52.66.220:50041/lapstat?currservers=BITFSAE-RGB" target="_blank" onMouseOver="MM_swapImage('Image4','','img/monaco roc.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/monaco roc.png" width="270" height="142" id="Image4"></a></td>
+          <td align="center" class="t14"><a href="http://106.52.66.220:50041/lapstat?currservers=FSAESIM-RGB" target="_blank" onMouseOver="MM_swapImage('Image4','','img/monaco roc.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/monaco roc.png" width="270" height="142" id="Image4"></a></td>
           <td align="center" class="t14"><a href="http://106.52.66.220:50041/lapstat?currservers=BITFSAE-RACE" target="_blank" onMouseOver="MM_swapImage('Image8','','img/dream circuit.png',1)" onMouseOut="MM_swapImgRestore()"><img src="img/redbullring.png" width="270" height="142" id="Image5"></a></td>
         </tr>
         <tr>
-          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20006" target="_blank" class="t14">BITFSAE-RGB 世界车王争霸赛 Monaco ROC</a></td>
+          <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20006" target="_blank" class="t14">FSAESIM-RGB 世界车王争霸赛 Monaco ROC</a></td>
           <td align="center" class="t14"><a href="https://acstuff.ru/s/q:race/online/join?ip=106.52.66.220&httpPort=20008" target="_blank" class="t14">BITFSAE-Formula 1 2019</a></td>
         </tr>
         <!--<tr>
