--- a/bitfsae/index.html
+++ b/bitfsae/index.html
@@ -251,7 +251,7 @@ function MM_swapImage() { //v3.0
         </tr>
         <tr>
           <td align="center"></td>
-          <td class="t14"><a href="https://pan.baidu.com/s/1b_rMQdmRuvCiNa-BRhU7Zw" target="_blank" class="T12">【赛道】BITFSAE-RACE 襄阳梦想赛车场 | 提取码：4n89</a></td>
+          <td class="t14"><a href="https://pan.baidu.com/s/1b_rMQdmRuvCiNa-BRhU7Zw" target="_blank" class="T12">【赛道】FSAESIM-RACE 襄阳梦想赛车场 | 提取码：4n89</a></td>
           <td align="center"></td>
           <td class="t14"><a href="https://pan.baidu.com/s/1kupoDchFC7-oiaG7AXU7OQ" target="_blank" class="T12">【车辆】Formula one 2019 | 提取码：aecz</a></td>
 		</tr>
